Added physics-engine - work-in-progress

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <script type="module" src="/script/game.js"></script>
+        <!-- <script src="/script/ammojs/ammo.wasm.js"></script> -->
+        <script src="/script/ammojs/ammo.js"></script>
         <link rel="stylesheet" href="style/style.css" />
     </head>
     <body>
