Handle player dropping - work-in-progress

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <link rel="stylesheet" href="style/style.css" />
     </head>
     <body>
+        <div class="header">
+            <h1>Trailblaze</h1>
+        </div>
         <canvas id="c"></canvas>
+        <div class="controls">
+
+        </div>
     </body>
 </html>
