Start-game button - work-in-progress

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <h1>Trailblaze</h1>
         </div>
         <canvas id="c"></canvas>
-        <div class="controls">
-
+        <div class="game-controls">
+            <button id="btnStartGame" class="control-button">Start game</button>
         </div>
     </body>
 </html>
