--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </div>
         <canvas id="c"></canvas>
         <div class="game-controls">
-            <button id="btnStartGame" class="control-button">Start game</button>
+            <button id="btnStartGame" class="start-button">Start</button>
         </div>
     </body>
 </html>
