Adjusted bounciness; Adjusted css

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
         <link rel="stylesheet" href="style/style.css" />
     </head>
     <body>
-        <div class="header">
+        <section class="header">
             <h1>Trailblaze</h1>
-        </div>
+        </section>
         <canvas id="c"></canvas>
-        <div class="game-controls">
-            <button id="btnStartGame" class="start-button">Start</button>
-        </div>
+        <section class="game-controls">
+            <div id="startControls">
+                <button id="btnStartGame" class="start-button">Start</button>
+            </div>
+            <div id="gameControls">
+            </div>
+        </section>
     </body>
 </html>
