Input controls - work-in-progress

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
             <h1>Trailblaze</h1>
         </section>
         <canvas id="c"></canvas>
-        <section class="game-controls">
+        <section class="game-controls" class="">
             <div id="startControls">
                 <button id="btnStartGame" class="start-button">Start</button>
             </div>
-            <div id="gameControls">
+            <div id="gameControls" class="hidden">
+                <button id="btnLeft" class="control-button"><</button>
+                <button id="btnRight" class="control-button">></button>
             </div>
         </section>
     </body>
