--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <section class="header">
             <h1>Trailblaze</h1>
         </section>
-        <canvas id="c"></canvas>
+        <section class="game-display">
+            <div id="timerDisplay"></div>
+            <canvas id="c"></canvas>
+        </section>
         <section class="game-controls" class="">
             <div id="startControls">
                 <button id="btnStartGame" class="start-button">Start</button>
