Font and styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <section class="header">
-            <h1>Trailblaze</h1>
+            <h1>Speed roller</h1>
         </section>
         <section class="game-display">
             <div id="timerDisplay"></div>
