--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
                 <button id="btnRight" class="control-button">></button>
             </div>
         </section>
+        <audio id="audioJump" src="/resources/audio/jump.mp3" crossorigin="anonymous" ></audio>
     </body>
 </html>
