--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     <svg xmlns="http://www.w3.org/2000/svg" id="iconAudioOn" class="" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
                     <svg xmlns="http://www.w3.org/2000/svg" id="iconAudioMuted" class="hidden" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"/></svg>
                 </button>
+                <button id="btnMuteMusic" class="mute-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" id="iconMusicOn" height="19" viewBox="0 0 24 24" width="19"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" id="iconMusicOff" class="hidden" height="19" viewBox="0 0 24 24" width="19"><path d="M0 0h24v24H0z" fill="none"/><path d="M4.27 3L3 4.27l9 9v.28c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4v-1.73L19.73 21 21 19.73 4.27 3zM14 7h4V3h-6v5.18l2 2z"/></svg>
+                </button>
             </div>
             <div id="startControls">
                 <button id="btnStartGame" class="start-button">Start</button>
@@ -29,5 +33,6 @@
             </div>
         </section>
         <audio id="audioJump" src="/resources/audio/jump.mp3" crossorigin="anonymous" ></audio>
+        <audio id="musicLoop_action001" src="/resources/audio/music/action-loop-001.mp3" crossorigin="anonymous" ></audio>
     </body>
 </html>
