--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <button id="btnStartGame" class="start-button">Start</button>
             </div>
             <div id="gameControls" class="hidden">
-                <button id="btnLeft" class="control-button"><</button>
-                <button id="btnRight" class="control-button">></button>
+                <button id="btnLeft" class="control-button direction-button-left"><</button>
+                <button id="btnRight" class="control-button direction-button-right">></button>
             </div>
         </section>
         <audio id="audioJump" src="/resources/audio/jump.mp3" crossorigin="anonymous" ></audio>
