Game completed message work-in-progress

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <section class="game-display">
             <div id="timerDisplay"></div>
             <canvas id="c"></canvas>
+            <div>
+                <span id="msgLevelCompleted" class="completed-message-hidden">Level completed!</span>
+            </div>
         </section>
         <section class="game-controls" class="">
             <div id="volumeControls" class="volume-controls">
