Display level-completed message - work-in-progress

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <section class="game-display">
             <div id="timerDisplay"></div>
             <canvas id="c"></canvas>
-            <div>
-                <span id="msgLevelCompleted" class="completed-message-hidden">Level completed!</span>
+            <div id="msgLevelCompleted" class="completed-message-hidden">
+                <span class="completed-message-subject">Congratulations!</span>
+                <p class="completed-message-time">Level completed in <span id="completedTime"></span> seconds.</p>
             </div>
         </section>
         <section class="game-controls" class="">
