Track-selector - work-in-progress

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                 <button id="btnRight" class="control-button direction-button-right">></button>
             </div>
         </section>
+        <section id="trackListSection" class="track-list-section hidden">
+            <h2>Select level</h2>
+            <ul id="trackList" class="track-list">
+            </ul>
+        </section>
         <audio id="audioJump" src="/resources/audio/jump.mp3" crossorigin="anonymous" ></audio>
         <audio id="musicLoop_action001" src="/resources/audio/music/action-loop-001.mp3" crossorigin="anonymous" ></audio>
     </body>
