Track-list improvements

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </button>
             </div>
             <div id="startControls">
-                <button id="btnStartGame" class="start-button">Start</button>
+                <!-- <button id="btnStartGame" class="start-button">Start</button> -->
             </div>
             <div id="gameControls" class="hidden">
                 <button id="btnLeft" class="control-button direction-button-left"><</button>
@@ -46,6 +46,12 @@
             <h2>Select level</h2>
             <ul id="trackList" class="track-list">
             </ul>
+            <div id="hiscoreListContainer" class="hiscore-list-container hidden">
+                <h3>Hiscores</h3>
+                <ul id="hiscoreList" class="hiscore-list">
+                    
+                </ul>
+            </div>
         </section>
         <audio id="audioJump" src="/resources/audio/jump.mp3" crossorigin="anonymous" ></audio>
         <audio id="musicLoop_action001" src="/resources/audio/music/action-loop-001.mp3" crossorigin="anonymous" ></audio>
