Hiscorelist at game-end work-in-progress; Debugging error on ios

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div id="msgLevelCompleted" class="completed-message-hidden">
                 <span class="completed-message-subject">Congratulations!</span>
                 <p class="completed-message-time">Level completed in <span id="completedTime"></span> seconds.</p>
+                <div id="completed-hiscorelist"></div>
             </div>
         </section>
         <section class="game-controls" class="">
@@ -53,6 +54,7 @@
                 </ul>
             </div>
         </section>
+        <div id="errorMsgPanel" class="hidden"></div>
         <audio id="audioJump" src="/resources/audio/jump.mp3" crossorigin="anonymous" ></audio>
         <audio id="musicLoop_action001" src="/resources/audio/music/action-loop-001.mp3" crossorigin="anonymous" ></audio>
     </body>
