Hiscorelist work-in-progtess

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div id="timerDisplay"></div>
             <canvas id="c"></canvas>
             <div id="msgLevelCompleted" class="completed-message-hidden">
-                <span class="completed-message-subject">Congratulations!</span>
+                <!-- <span class="completed-message-subject">Congratulations!</span> -->
                 <p class="completed-message-time">Level completed in <span id="completedTime"></span> seconds.</p>
                 <div id="completed-hiscorelist"></div>
             </div>
