--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <div id="msgLevelCompleted" class="completed-message-hidden">
                 <!-- <span class="completed-message-subject">Congratulations!</span> -->
                 <p class="completed-message-time">Level completed in <span id="completedTime"></span> seconds.</p>
+                <button id="btnRestartLevel" class="hidden">Restart level</button>
+                <button id="btnNewGame" class="hidden">New game</button>
                 <div id="completed-hiscorelist"></div>
             </div>
         </section>
